--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "http://olanorth.github.io/Fingerprinting",
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://fingerprinting-web-app.lm.r.appspot.com",
+  "proxy": "https://browserfapp.azurewebsites.net/",
   "private": true,
   "dependencies": {
     "@fingerprintjs/fingerprintjs-pro-react": "^2.6.2",
